syntax = "proto3";
package IronPdfEngine.Proto;
import "PdfDocument.proto";
import "Basic.proto";

option java_package = "com.ironsoftware.ironpdf.internal.proto";
option java_multiple_files = true;

message PdfAttachmentCollection{
  repeated string names = 1;
}

message GetPdfAttachmentCollectionRequest{
  PdfDocument document = 1;
}

message GetPdfAttachmentCollectionResult{
  oneof result_or_exception {
    PdfAttachmentCollection result = 1;
    RemoteException exception = 2;
  }
}

message GetPdfAttachmentDataRequest{
  PdfDocument document = 1;
  string name = 2;
}

message GetPdfAttachmentDataResultStream{
  oneof result_or_exception {
    bytes result_chunk = 1;
    RemoteException exception = 2;
  }
}

message AddPdfAttachmentRequestStream{
   oneof request {
    Info info = 1;
    bytes attachment_chunk = 2;
  }
  message Info{
     PdfDocument document = 1;
     string name =2;
  }
}

message RemovePdfAttachmentRequest{
  PdfDocument document = 1;
  string name = 2;
}

message SetPdfAttachmentDataRequestStream{
 oneof request {
    Info info = 1;
    bytes attachment_chunk = 2;
  }
  message Info{
     PdfDocument document = 1;
     string name =2;
  }
}